Fixed alignment of dev

--- a/style.css
+++ b/style.css
@@ -44,6 +44,9 @@ a:hover, a:visited, a:link, a:active
 #se{
     margin-right:1vw;
 }
+#se a h3{
+    margin-left:1.5em;
+}
 
 #dev{
     margin-left:1vw;
